# Mini_Taschenrechner

./: README.md
Mini_Taschenrechner/: pyproject.toml
Mini_Taschenrechner/src/mini_taschenrechner/: __init__.py  app.py
